--- a/contato.html
+++ b/contato.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contato</title>
-    <link rel="stylesheet" href="../CSS/contato.css">
+    <link rel="stylesheet" href="CSS/contato.css">
 </head>
 <body>
     <header class="cor-logo" id="header">
         <div id="header-title">
-            <img src="../imagens/Logo.png" class="logo">
+            <img src="imagens/Logo.png" class="logo">
         </div>
 
         <nav> 
@@ -37,7 +37,7 @@
 
     <main class="cor-fundo">
         <section class="imagem-voluntario">
-            <img src="../imagens/voluntario.jpg" class="voluntariado"/>
+            <img src="imagens/voluntario.jpg" class="voluntariado"/>
             <p class="subtitulo"><b>Cadastre-se abaixo</b></p>
         </section>
 
@@ -106,11 +106,11 @@
     
 
     <footer class="cor-logo"  id="rodape">
-       <img src="../imagens/Logo.png" class="logo"> 
+       <img src="imagens/Logo.png" class="logo"> 
        <p>&copy; ONG PEQUENINOS. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="../JavaScript/contato.js"></script>
+    <script src="JavaScript/contato.js"></script>
 
     
 </body>
