--- a/projetos.html
+++ b/projetos.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projetos</title>
-    <link rel="stylesheet" href="../CSS/projetos.css">
+    <link rel="stylesheet" href="CSS/projetos.css">
 </head>
 <body>
     <header class="cor-logo" id="header">
         <div id="header-title">
-            <img src="../imagens/Logo.png" class="logo">
+            <img src="imagens/Logo.png" class="logo">
         </div>
         
         <nav> 
@@ -30,7 +30,7 @@
 
     <main>
         <section id="oficinas">
-            <img src="../imagens/Oficinas.png" id="imagem-principal">
+            <img src="imagens/Oficinas.png" id="imagem-principal">
             <h1 id="titulo">O que oferecemos?</h1><br>
         <section>
     </main>
@@ -61,7 +61,7 @@
     </main>
 
     <footer class="cor-logo" id="rodape">
-       <img src="../imagens/Logo.png" class="logo"> 
+       <img src="imagens/Logo.png" class="logo"> 
        <p>&copy; ONG PEQUENINOS. Todos os direitos reservados.</p>
     </footer>
     
