Ajustes visual mobile

--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
                         <dialog class="modal" open>
                             <h2>O QUE VOCÊ GANHA NOS AJUDANDO?</h2>
                             <p>
-                                A ONG Pequeninos oferece aos nossos voluntários a experiência de ajudar o próximo e colaborar para um mundo melhor! Ajudar o próximo fala mais  de si para a humanidade, ajuda um dos pequeninos!
+                                A ONG Pequeninos oferece aos nossos voluntários a experiência de ajudar o próximo e colaborar para um mundo melhor! Ajudar o próximo fala mais  de si para a humanidade, ajude um dos pequeninos!
                             </p>
                             <button>OK!</button>
                         </dialog>
