--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ONG PEQUENINOS</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 </head>
 <body>
@@ -37,63 +38,65 @@
     </section>
 
     <main class="cor-fundo">
-        <section class="text-container">
-            <div class="card-1">
-                <article>
-                    <h2 id="recebe-texto" class="section-title">Qual a nossa história?</h2>
-                    <p>A <strong>ONG PEQUENINOS</strong> nasceu da vontade de querer mudar o mundo, mesmo que de forma pequena. Sendo assim, nosso presidente fundador, nos anos 2000, ao se deparar com diferentes perspectivas no bairro em que morava, principalmente no que tange a crianças e adolescentes, percebeu a necessidade de agir.</p>
-                    <p>Ao visualizar diferentes situações de riscos, exposições e a negligência de direitos as crianças e adolecentes do bairro Boa Vida, em um ato de coragem, decidiu fundar a princípio uma associação, voltada a promoção do direito de ser, de brincar e da garantia básica de direitos.</p>
-                    <p>A instituição, a partir disso iniciou suas ações com crianças e adolescentes, no qual em período de contrturno escolar oferecia a crianças e adolescentes oficinas que promoviam o esporte, a cultura e o reforço escolar, junto a isso também oferecia grupo de escuta e resolução de conflitos.</p>
-                    <p>Nossa história soma neste ano 25 anos de atuação na garantia de direitos básicos, no direito de ser criança e adolescente, no direito a cultura, esporte, educação e alimentação. Atendemos atualmente cerca de 250 crianças e adolescentes, que são assistidas pela nosso instituição em período de contraturno escolar. <br><br><b>Seja parte desta ação, promova sonhos.</b></p>
-                </article>
-            </div>
-        </section><br>
+        <div class="container">
+            <section class="text-container">
+                <div class="card-1">
+                    <article>
+                        <h2 id="recebe-texto" class="section-title">Qual a nossa história?</h2>
+                        <p>A <strong>ONG PEQUENINOS</strong> nasceu da vontade de querer mudar o mundo, mesmo que de forma pequena. Sendo assim, nosso presidente fundador, nos anos 2000, ao se deparar com diferentes perspectivas no bairro em que morava, principalmente no que tange a crianças e adolescentes, percebeu a necessidade de agir.</p>
+                        <p>Ao visualizar diferentes situações de riscos, exposições e a negligência de direitos as crianças e adolecentes do bairro Boa Vida, em um ato de coragem, decidiu fundar a princípio uma associação, voltada a promoção do direito de ser, de brincar e da garantia básica de direitos.</p>
+                        <p>A instituição, a partir disso iniciou suas ações com crianças e adolescentes, no qual em período de contrturno escolar oferecia a crianças e adolescentes oficinas que promoviam o esporte, a cultura e o reforço escolar, junto a isso também oferecia grupo de escuta e resolução de conflitos.</p>
+                        <p>Nossa história soma neste ano 25 anos de atuação na garantia de direitos básicos, no direito de ser criança e adolescente, no direito a cultura, esporte, educação e alimentação. Atendemos atualmente cerca de 250 crianças e adolescentes, que são assistidas pela nosso instituição em período de contraturno escolar. <br><br><b>Seja parte desta ação, promova sonhos.</b></p>
+                    </article>
+                </div>
+            </section><br>
 
-        <section class="text-container">
-            <div class="card-1">
-                <h2 class="section-title">Missão, Visão e Valores</h2>
-                <article>
-                    <h3 class="section-subtitle"><b>Missão</b></h3>
-                    <p>Promover o desenvolvimento integral de crianças e adolescentes em situação de vulnerabilidade, garantindo seus direitos fundamentais e oferecendo oportunidades de educação, cultura, esporte e convivência saudável em um ambiente acolhedor e transformador.</p>
-                </article>
-                <article>
-                    <h3 class="section-subtitle"><b>Visão</b></h3>
-                    <p>Ser referência na promoção e defesa dos direitos de crianças e adolescentes, contribuindo para a formação de uma sociedade mais justa, solidária e consciente do valor da infância e da adolescência.</p>
-                </article>
-                <article>
-                    <h3 class="section-subtitle"><b>Valores</b></h3>
-                    <p>Respeito à infância e à adolescência – reconhecer e valorizar cada criança e adolescente em sua singularidade;<p>
-                    <ul>
-                        <li>
-                            <p>Empatia e acolhimento – atuar com sensibilidade e escuta ativa diante das necessidades da comunidade;</p>
-                        </li>
-                        <li>
-                            <p>Compromisso social – trabalhar de forma contínua pela garantia dos direitos e pela transformação social;</p>
-                        </li>
-                        <li>
-                            <p>Educação e cidadania – incentivar o aprendizado, a criatividade e a participação ativa na sociedade;</p>
-                        </li>
-                        <li>
-                            <p>Transparência e ética – conduzir todas as ações com responsabilidade e honestidade;</p>
-                        </li>
-                        <li>    
-                            <p>Cooperação e solidariedade – fortalecer vínculos entre famílias, voluntários, parceiros e 
-                            comunidade;</p>
-                        </li>
-                        <li>    
-                            <p>Esperança e transformação – acreditar que pequenas ações podem gerar grandes mudanças.</p>
-                        </li>
-                    </ul>
-                </article>
-            </div>    
-        </section>
+            <section class="text-container">
+                <div class="card-1">
+                    <h2 class="section-title">Missão, Visão e Valores</h2>
+                    <article>
+                        <h3 class="section-subtitle"><b>Missão</b></h3>
+                        <p>Promover o desenvolvimento integral de crianças e adolescentes em situação de vulnerabilidade, garantindo seus direitos fundamentais e oferecendo oportunidades de educação, cultura, esporte e convivência saudável em um ambiente acolhedor e transformador.</p>
+                    </article>
+                    <article>
+                        <h3 class="section-subtitle"><b>Visão</b></h3>
+                        <p>Ser referência na promoção e defesa dos direitos de crianças e adolescentes, contribuindo para a formação de uma sociedade mais justa, solidária e consciente do valor da infância e da adolescência.</p>
+                    </article>
+                    <article>
+                        <h3 class="section-subtitle"><b>Valores</b></h3>
+                        <p>Respeito à infância e à adolescência – reconhecer e valorizar cada criança e adolescente em sua singularidade;<p>
+                        <ul>
+                            <li>
+                                <p>Empatia e acolhimento – atuar com sensibilidade e escuta ativa diante das necessidades da comunidade;</p>
+                            </li>
+                            <li>
+                                <p>Compromisso social – trabalhar de forma contínua pela garantia dos direitos e pela transformação social;</p>
+                            </li>
+                            <li>
+                                <p>Educação e cidadania – incentivar o aprendizado, a criatividade e a participação ativa na sociedade;</p>
+                            </li>
+                            <li>
+                                <p>Transparência e ética – conduzir todas as ações com responsabilidade e honestidade;</p>
+                            </li>
+                            <li>    
+                                <p>Cooperação e solidariedade – fortalecer vínculos entre famílias, voluntários, parceiros e 
+                                comunidade;</p>
+                            </li>
+                            <li>    
+                                <p>Esperança e transformação – acreditar que pequenas ações podem gerar grandes mudanças.</p>
+                            </li>
+                        </ul>
+                    </article>
+                </div>    
+            </section>
 
-        <section class="text-container find-us"><br>
-            <h2 class="section-title">Como nos encontrar</h2>
-            <p>Endereço: Rua das crianças, n° 100 - Jardim Boa Vida, Curitiba/PR</p>
-            <p>Telefone: (41) 3154-5555</p>
-            <p>E-mail: adm@ongpequeninos.org.br</p><br>
-        </section>
+            <section class="text-container find-us"><br>
+                <h2 class="section-title">Como nos encontrar</h2>
+                <p>Endereço: Rua das crianças, n° 100 - Jardim Boa Vida, Curitiba/PR</p>
+                <p>Telefone: (41) 3154-5555</p>
+                <p>E-mail: adm@ongpequeninos.org.br</p><br>
+            </section>
+        </div>
     </main> 
 
     <footer class="cor-logo" id="footer">
