--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="imagens/Logo.png" class="logo">
         </div>
         
-        <nav> 
+        <nav class="navbar"> 
             <ul class="lista">
                 <li class="subs">
                     <a href="projetos.html">Nosso Projeto</a>
