--- a/projetos.html
+++ b/projetos.html
@@ -5,26 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projetos</title>
     <link rel="stylesheet" href="CSS/projetos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="cor-logo" id="header">
         <div id="header-title">
             <img src="imagens/Logo.png" class="logo">
         </div>
-        
-        <nav> 
-            <ul class="lista">
-                <li class="subs">
-                    <a href="projetos.html">Nosso Projeto</a>
-                    <a href="contato.html">Seja Voluntário</a>
-                </li>
-                <li class="menu-drop"><a href="#">Início</a>
-                    <div class="drop">
-                        <a href="index.html">Página inicial</a>
-                        <a href="index.html#recebe-texto">Nossa História</a>
-                    </div>
-                </li>
-            </ul>    
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav text-center gap-2">
+                        <li class="nav-item">
+                        <a class="btn btn-system text-white" href="projetos.html">Nosso Projeto</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="btn btn-system text-white" href="contato.html">Seja Voluntário</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                        <a class="btn btn-system dropdown-toggle text-white" href="#" id="menuDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end text-center" aria-labelledby="menuDropdown">
+                            <li><a class="dropdown-item" href="index.html">Página inicial</a></li>
+                            <li><a class="dropdown-item" href="#recebe-texto">Nossa História</a></li>
+                        </ul>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
